Ajout custom.css dans le dossier

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Javascript</title>
 	<link rel="stylesheet" href="css/reveal.css">
 	<link rel="stylesheet" href="lib/css/zenburn.css">
-	<link rel="stylesheet" href="http://www.duboishome.info/dimitri/cours/custom.css">
+	<link rel="stylesheet" href="css/custom.css">
 	<script>
 		var link = document.createElement( 'link' );
 		link.rel = 'stylesheet';
