Description des types sur un nouveau slide

--- a/index.html
+++ b/index.html
@@ -115,17 +115,18 @@
     		<li>sensible à la casse donc maVariable != mavariable != MaVariable</li>
     		<li>Liste des mots réservés <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Lexical_grammar#Keywords" target="_blank">ici</a></li>
     		<li>typage dynamique</li>
-    		<li>principaux types : Number, String, Boolean, Undefined, Null et Object
-                <ul>
-                    <li>Number : entiers ou décimaux</li>
-                    <li>String : chaînes de caractères</li>
-                    <li>Boolean : true ou false</li>
-                    <li>Undefined : variable non définie, ou déclarée mais sans valeur</li>
-                    <li>Null : variable déclarée avec une valeur null explicite</li>
-                    <li>Object : différents types comme des tableaux ou des dictionnaires</li>
-                </ul>
-            </li>
+    		<li>principaux types : Number, String, Boolean, Undefined, Null et Object</li>
     	</ul>
+    </section>
+    <section>
+        <ul>
+            <li>Number : entiers ou décimaux</li>
+            <li>String : chaînes de caractères</li>
+            <li>Boolean : true ou false</li>
+            <li>Undefined : variable non définie, ou déclarée mais sans valeur</li>
+            <li>Null : variable déclarée avec une valeur null explicite</li>
+            <li>Object : différents types comme des tableaux ou des dictionnaires</li>
+        </ul>
     </section>
     <section id="operateurs">
     	<h3>Opérateurs</h3>
