Formulaire + jeu dans sections différentes

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 		<li><a href="#element_document">L'objet document</a></li>
 		<li><a href="#dom_selection">Sélection des éléments du DOM</a></li>
 		<li><a href="#dom_modification">Modification des éléments du DOM</a></li>
+        <li><a href="#formulaires">Récupération des informations d'un formulaire</a></li>
+        <li><a href="#jeu">Réalisation d'un jeu simple</a></li>
 		<li><a href="#sources">Sources</a></li>
 		<li><a href="#pour_aller_plus_loin">Pour aller plus loin</a></li>
 	</ul>
@@ -477,8 +479,12 @@
 				pour afficher un élément : <code>element.style.display = "block";</code> <br>
     	</p>
     </section>
+</section>
+
+<!-- FORMULAIRES ------------------------------------------------------------->
+<section id="formulaires">
     <section>
-        <h3>Récupération des valeurs d'un formulaire</h3>
+        <h2>Récupération des valeurs d'un formulaire</h2>
         <p>
             Les widgets de formulaire (input) ont un attribut <i>value</i> qu'il faut récupérer.
         </p>
@@ -495,8 +501,12 @@
             <u>Aide</u> : pour les boutons radios, pour récupérer le bouton sélectionné <code>document.querySelector("input[name=sexe]:checked");</code>
         </p>
     </section>
+</section>
+
+<!-- Réalisation d'un jeu ---------------------------------------------------->
+<section id="jeu">
     <section>
-        <h3>Pratique</h3>
+        <h2>Réalisation d'un jeu simple</h2>
         <p>
             Créer l'équivalent de la page <a href="ballon.html" target="_blank">ballon</a>.
         </p>
