--- a/ballon.html
+++ b/ballon.html
@@ -31,7 +31,7 @@
                     Bonne chance !!!
                 </p>
                 <p style="font-weight: bold">Nombre d'injections : <span id="nb_injections_out">0</span></p>
-                <img src="img/balloon.png" alt="Ballon" style="width:100px" id="ballon">
+                <img src="img/balloon.png" alt="Ballon" width="100" id="ballon">
                 <p id="result" style="font-size: 1.5em; font-weight: bold"></p>
             </div>
             <div class="row">
