zone autour du ballon

--- a/ballon.html
+++ b/ballon.html
@@ -31,7 +31,9 @@
                     Bonne chance !!!
                 </p>
                 <p style="font-weight: bold">Nombre d'injections : <span id="nb_injections_out">0</span></p>
-                <img src="img/balloon.png" alt="Ballon" width="100" id="ballon">
+                <figure style="height: 300px">
+                    <img src="img/balloon.png" alt="Ballon" width="100" id="ballon">
+                </figure>
                 <p id="result" style="font-size: 1.5em; font-weight: bold"></p>
             </div>
             <div class="row">
